--- a/kinss.css
+++ b/kinss.css
@@ -113,7 +113,7 @@
     #home-image {
       width: 100%;
       height: 200px;
-      object-fit: cover;
+      object-fit: contain;
       border-radius: var(--border-radius);
       margin-bottom: 1rem;
     }
